changed upload progress format

--- a/PixelSort/app/src/main/res/layout/add_photos.xml
+++ b/PixelSort/app/src/main/res/layout/add_photos.xml
@@ -188,20 +188,37 @@
         app:layout_constraintBottom_toTopOf="@id/uploadProgress"/>
 
     <TextView
-        android:id="@+id/uploadProgress"
-        android:layout_width="match_parent"
+        android:id="@+id/uploadCount"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textColor="#34495e"
-        android:text=""
-        android:textSize="20dp"
-        android:visibility="visible"
         android:layout_marginBottom="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text=""
+        android:gravity="left"
+        android:textColor="#34495e"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@id/browsePhotos"
+        app:layout_constraintEnd_toStartOf="@id/uploadProgress"
+        app:layout_constraintStart_toStartOf="@id/progressBar"
         app:layout_constraintTop_toBottomOf="@id/progressBar"
-        app:layout_constraintBottom_toTopOf="@id/browsePhotos"/>
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/uploadProgress"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:text=""
+        android:gravity="right"
+        android:textColor="#34495e"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@id/browsePhotos"
+        app:layout_constraintEnd_toEndOf="@id/progressBar"
+        app:layout_constraintStart_toEndOf="@id/uploadCount"
+        app:layout_constraintTop_toBottomOf="@id/progressBar" />
 
     <LinearLayout
         android:id="@+id/footernav"
